总结来说debug修正部分报错，但是准确率没有提升，速度稍稍提升